[package]
name = "dnstools"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "fs-all", "dialog-open", "updater", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surge-ping = "0.8.0"
tokio = { version = "1.21.2", features = ["full"] }
trust-dns-resolver = { version = "0.20.4", features = ["tokio-runtime"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
